--- a/nmcnpmapp/templates/app/contact.html
+++ b/nmcnpmapp/templates/app/contact.html
@@ -8,7 +8,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/home.css' %}?v=3">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}?v=2">
-    <link rel="stylesheet" href="{% static 'css/newstyles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/services.css' %}?v=2">
     <link rel="stylesheet" href="{% static 'css/responsive-tablet.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive-mobile.css' %}">
 
